2013-02-12  Tassilo Horn  <tsdh@gnu.org>

	* doc-view.el (doc-view-odf->pdf-converter-soffice): Use separate
	UserInstallation when calling soffice to work around LibreOffice
	bug 37531.

2013-02-12  Glenn Morris  <rgm@gnu.org>

	* files.el (basic-save-buffer):
	Offer to create a non-existing directory.  (Bug#3016)

	* calc/calc-graph.el (calc-graph-show-dumb):
	* calendar/calendar.el (calendar-mode-map):
	* cus-edit.el (custom-mode-map):
	* ehelp.el (electric-help-map):
	* emulation/vip.el (vip-mode-map):
	* epa.el (epa-key-list-mode-map):
	* info.el (Info-mode-map):
	* mail/rmail.el (rmail-mode-map):
	* mail/rmailsum.el (rmail-summary-mode-map):
	* man.el (Man-mode-map):
	* net/newst-plainview.el (newsticker-mode-map):
	* progmodes/cpp.el (cpp-edit-mode-map):
	* progmodes/grep.el (grep-mode-map):
	* progmodes/idlw-help.el (idlwave-help-mode-map):
	* simple.el (special-mode-map):
	* startup.el (splash-screen-keymap):
	* view.el (view-mode-map):
	Make S-SPC scroll in the opposite sense to SPC.  (Bug#2145)

2013-02-11  Elias Pipping  <pipping@lavabit.com>

	* doc-view.el (doc-view-current-cache-dir): Beware % escapes
	(bug#13679).

2013-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* cus-start.el (all): Remove inhibit-local-menu-bar-menus.

2013-02-11  Glenn Morris  <rgm@gnu.org>

	* vc/diff.el (diff-use-labels): New variable.
	(diff-no-select): Use --label rather than -L, and first
	check that it is supported.  (Bug#11067)

	* files.el (enable-dir-local-variables): New variable.
	(hack-dir-local-variables): Respect enable-dir-local-variables.
	* tutorial.el (help-with-tutorial):
	Ignore directory-local variables.  (Bug#11127)

	* vc/vc-svn.el (vc-svn-command): Move --non-interactive from here...
	(vc-svn-global-switches): ... to here.  (Bug#13513)

2013-02-10  Christopher Schmidt  <christopher@ch.ristopher.com>

	* minibuf-eldef.el (minibuffer-default--in-prompt-regexps):
	Handle "foo (bar, default: xxx): " prompts.

2013-02-10  Chong Yidong  <cyd@gnu.org>
