@@ -1,3 +1,13 @@
+2013-02-12  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp-adb.el (tramp-adb-handle-start-file-process): Rewrite.
+
+	* net/tramp-compat.el (top): Declare `remote-file-name-inhibit-cache'
+	only if it doesn't exist.
+
+	* net/tramp-sh.el (tramp-sh-handle-start-file-process): Set
+	process marker.
+
 2013-02-12  Tassilo Horn  <tsdh@gnu.org>
 
 	* doc-view.el (doc-view-odf->pdf-converter-soffice): Use separate
